versions/v2.9/modules/en/pages/cluster-admin/kubernetes-resources/kubernetes-resources-setup.adoc
= Kubernetes Resources Setup
:page-languages: [en, zh]
:revdate: 2025-03-17
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/index.adoc 
:product-path: cluster-admin/kubernetes-resources/kubernetes-resources-setup.adoc
ifeval::["{build-type}" != "community"]
:xref-secrets: xref:security/secrets-hub.adoc
:xref-configmaps: xref:cluster-admin/kubernetes-resources/configmaps.adoc
:xref-workloads-and-pods: xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
:xref-http-encrypt: xref:security/encrypting-http.adoc
:xref-l4-l7-lb: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc
:xref-k8s-docker-registries: xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc
:xref-add-ingresses: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/add-ingresses.adoc
:xref-create-services: xref:cluster-admin/kubernetes-resources/create-services.adoc
:xref-upgrade-workloads: xref:cluster-admin/kubernetes-resources/workloads-and-pods/upgrade-workloads.adoc
:xref-roll-back-workloads: xref:cluster-admin/kubernetes-resources/workloads-and-pods/roll-back-workloads.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-secrets: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc
:xref-configmaps: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/configmaps.adoc
:xref-workloads-and-pods: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/index.adoc
:xref-http-encrypt: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/encrypt-http-communication.adoc
:xref-l4-l7-lb: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc
:xref-k8s-docker-registries: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/kubernetes-and-docker-registries.adoc
:xref-add-ingresses: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/load-balancer-and-ingress-controller/add-ingresses.adoc
:xref-create-services: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/create-services.adoc
:xref-upgrade-workloads: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/upgrade-workloads.adoc
:xref-roll-back-workloads: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/roll-back-workloads.adoc
endif::[]

You can view and manipulate all of the custom resources and CRDs in a Kubernetes cluster from the Rancher UI.

== Workloads

Deploy applications to your cluster nodes using {xref-workloads-and-pods}[workloads], which are objects that contain pods that run your apps, along with metadata that set rules for the deployment's behavior. Workloads can be deployed within the scope of the entire clusters or within a namespace.

When deploying a workload, you can deploy from any image. There are a variety of {xref-workloads-and-pods}#_workload_types[_workload_types[workload types] to choose from which determine how your application should run.

Following a workload deployment, you can continue working with it. You can:

* {xref-upgrade-workloads}[Upgrade] the workload to a newer version of the application it's running.
* {xref-roll-back-workloads}[Roll back] a workload to a previous version, if an issue occurs during upgrade.
* xref:cluster-admin/kubernetes-resources/workloads-and-pods/add-a-sidecar.adoc[Add a sidecar], which is a workload that supports a primary workload.

== Load Balancing and Ingress

=== Load Balancers

After you launch an application, it's only available within the cluster. It can't be reached externally.

If you want your applications to be externally accessible, you must add a load balancer to your cluster. Load balancers create a gateway for external connections to access your cluster, provided that the user knows the load balancer's IP address and the application's port number.

Rancher supports two types of load balancers:

* {xref-l4-l7-lb}#_layer_4_load_balancer[Layer-4 Load Balancers]
* {xref-l4-l7-lb}#_layer_7_load_balancer[Layer-7 Load Balancers]

For more information, see {xref-l4-l7-lb}[load balancers].

==== Ingress

Load Balancers can only handle one IP address per service, which means if you run multiple services in your cluster, you must have a load balancer for each service. Running multiples load balancers can be expensive. You can get around this issue by using an ingress.

Ingress is a set of rules that act as a load balancer. Ingress works in conjunction with one or more ingress controllers to dynamically route service requests. When the ingress receives a request, the ingress controller(s) in your cluster program the load balancer to direct the request to the correct service based on service subdomains or path rules that you've configured.

For more information, see {xref-add-ingresses}[Ingress].

When using ingresses in a project, you can program the ingress hostname to an external DNS by setting up a Global DNS entry.

== Service Discovery

After you expose your cluster to external requests using a load balancer and/or ingress, it's only available by IP address. To create a resolveable hostname, you must create a service record, which is a record that maps an IP address, external hostname, DNS record alias, workload(s), or labelled pods to a specific hostname.

For more information, see {xref-create-services}[Service Discovery].

== Applications

Besides launching individual components of an application, you can use the Rancher catalog to start launching applications, which are Helm charts.

== Kubernetes Resources

Within the context of a Rancher project or namespace, _resources_ are files and data that support operation of your pods. Within Rancher, certificates, registries, and secrets are all considered resources. However, Kubernetes classifies resources as different types of https://kubernetes.io/docs/concepts/configuration/secret/[secrets]. Therefore, within a single project or namespace, individual resources must have unique names to avoid conflicts. Although resources are primarily used to carry sensitive information, they have other uses as well.

Resources include:

* {xref-http-encrypt}[Certificates]: Files used to encrypt/decrypt data entering or leaving the cluster.
* {xref-configmaps}[ConfigMaps]: Files that store general configuration information, such as a group of config files.
* {xref-secrets}[Secrets]: Files that store sensitive data like passwords, tokens, or keys.
* {xref-k8s-docker-registries}[Registries]: Files that carry credentials used to authenticate with private registries.
